kubernetes/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  selector:
    app: envoy
  ports:
    - name: http # Añadido el nombre del puerto
      protocol: TCP
      port: 10000  # El puerto que se usará para redirigir el tráfico
      targetPort: 10000
    - name: admin # Añadido el nombre del puerto
      protocol: TCP
      port: 9901  # Puerto de administración de Envoy
      targetPort: 9901
  type: LoadBalancer  # O LoadBalancer si quieres exponerlo externamente
