kubernetes/envoy/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-workers-to-envoy
spec:
  podSelector:
    matchLabels:
      app: locust-worker
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
      podSelector:
        matchLabels:
          app: envoy-proxy
    ports:
    - protocol: TCP
      port: 8080
