kubernetes/envoy/parapruebasnavegador.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-ui
spec:
  selector:
    app: locust-master
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8089  # Puerto de la UI de Locust
      targetPort: 8089
